--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,11 +4,11 @@ version: 0.0.6
 author: loint <loint@foodtiny.com>
 
 environment:
-  sdk: '>=2.0.0-dev.23.0 <2.0.0'
+  sdk: '>=2.0.0'
 
 dependencies:
   socket_client_dart:
       path: ../
 
 dev_dependencies:
-  test: ^0.12.8
+  test: ^1.3.0
